--- a/RestaurantG5/RestaurantG5.csproj
+++ b/RestaurantG5/RestaurantG5.csproj
@@ -5,12 +5,17 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <ApplicationIcon />
     <StartupObject />
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <EnableNETAnalyzers>false</EnableNETAnalyzers>
+    <UserSecretsId>9548319d-bb7a-4759-adff-50505a7e95f4</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.13" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Ryan.MonoGame.Framework.DesktopGL" Version="3.7.200" />
   </ItemGroup>
+
 
 </Project>
